# readme-summarizer

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml
docs/: CLI_GUIDE.md  DOC_INDEX.md  FEATURES.md  OUTPUT_EXAMPLES.md  PROJECT_SUMMARY.md  QUICK_REF.md  README.md
docs/guides/: CONTENT_NORMALIZER.md  FILE_DETECTOR.md  INPUT_RESOLVER.md  METADATA_FORMATTER_GUIDE.md  METADATA_FORMATTER_QUICKREF.md  POST_PROCESSOR_GUIDE.md  POST_PROCESSOR_QUICKREF.md  WRAPPER_GUIDE.md  WRAPPER_OVERVIEW.md
docs/implementation/: FEATURE_SUMMARY.md  FILE_DETECTOR_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  POST_PROCESSOR_IMPLEMENTATION.md  WRAPPER_IMPLEMENTATION.md
docs/quickstarts/: QUICKSTART_FILE_DETECTOR.md  QUICKSTART_INPUT_RESOLVER.md  QUICKSTART_WRAPPER.md
docs/test-reports/: COMPREHENSIVE_TEST_SUMMARY.md  TEST_REPORT.md  TEST_REPORT_METADATA_FORMATTER.md  TEST_RESULTS.md  WRAPPER_TEST_REPORT.md
samples/: demo_analytics.json  demo_enhanced.md  demo_output_dracula.html  demo_output_github.html  demo_output_material.html  demo_pdf_ready.html  demo_quick.html  demo_social_snippets.json  example_usage.py  file_detector_demo.py  input_resolver_demo.py  metadata_formatter_demo.py  post_processor_demo.py  wrapper_demo.py
src/summarize_readme/: __init__.py  ai_enhancers.py  cli.py  content_normalizer.py  core.py  formatter.py  input_resolver.py  metadata_extractor.py  post_processor.py  readme_detector.py  templates.py  utils.py  wrapper.py
src/summarize_readme/templates/: base.html.jinja2  social_snippet.json
test_samples/: emoji_heavy.md  html_heavy.md  messy_readme.md  simple_emoji.md  test_batch.txt  test_readme.md  unicode_test.md
tests/: __init__.py  comprehensive_test.py  test_cli.py  test_cli_quick.py  test_comprehensive_normalizer.py  test_content_normalizer.py  test_core.py  test_input_resolver.py  test_input_resolver_manual.py  test_metadata_formatter.py  test_metadata_formatter_manual.py  test_post_processor_manual.py  test_postprocess_matrix.py  test_utils.py
